<resources>
    <string name="app_name">Meal Planner</string>
    <string name="splash_subtitle">Your personalized kitchen assistant for healthy living</string>
    <string name="splash_name_app">FreshPlan</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_subtitle">Sign in to sync your recipes and meal plans across devices.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">FORGOT?</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="continue_guest">Continue as Guest</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="join_us">Join Us</string>
    <string name="signup_subtitle">Start your premium meal planning journey today.</string>
    <string name="username">Username</string>
    <string name="choose_username">Choose a username</string>
    <string name="create_password">Create a password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="sign_up_with">or sign up with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="discover_new_flavors">Discover New Flavors</string>
    <string name="discover_new_flavor_subtitle">Explore recipes from different cultures and enjoy flavors from around the world, all in one place.</string>
    <string name="plan_your_week">Plan Your Week</string>
    <string name="plan_your_week_subtitle">Organize your meals for the whole week and plan every day with ease and balance.</string>
    <string name="cooking_anywhere">Cooking Anywhere</string>
    <string name="cooking_anywhere_subtitle">Access recipes, ingredients, and steps anytime — even without internet.</string>
    <string name="get_started">Get Started</string>>
    <string name="skip_button">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="search_bar_home">Search for recipes </string>
    <string name="recommended_text">Recommended meal</string>
    <string name="meal_of_day">Meal Of The Day </string>
    <string name="view_recipe">View Recipe</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="popular_meals">Popular Meals</string>
    <string name="meal_day_name">Creamy Avocado\nPasta</string>
    <string name="time">15 min</string>
    <string name="diffecalty">Easy</string>
    <string name="category_name">Beef</string>
    <string name="home">Home</string>
    <string name="planner">Planner</string>
    <string name="favorite">Saved</string>
    <string name="account">Account</string>
    <string name="tag_string">TAG</string>
    <string name="area_category">Area • Category</string>
    <string name="meal_name">Meal Name</string>
    <string name="app_logo">Application Logo</string>
    <string name="start_cooking_mode">Start Cooking Mode</string>
    <string name="meal_name_details">Spicy Basil Chicken</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="meal_details_title">Meal Details</string>
    <string name="quantaty">500g</string>
    <string name="no_meals_found">No Meals Found</string>
    <string name="no_meals_description">We couldn\'t find any meals at the moment. Please try again later.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_description">Please check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="no_meal">Sorry, no meals for this day</string>
    <string name="weekly_meal_plan">Weekly Meal Plan</string>
    <string name="filter">Filters</string>
    <string name="clear_all">Clear All</string>
    <string name="catagory">Category</string>Category List
    <string name="category_list">Category List</string>
    <string name="watch_cook">Watch Cook</string>
    <string name="set_meal_to_day">Set Meal To Day</string>
    <string name="area">Area</string>
    <string name="ingredient">Ingredient</string>
    <string name="meal_of_the_day">"Meal of this Day"</string>
    <string name="facebook_app_id">1443463377184553</string>
    <string name="facebook_client_token">fa20f5125be619c12ca5e3b074abbaee</string>
    <string name="instructin_steps">Instruction text goes here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>