<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="16dp">
            <TextView
                android:id="@+id/tvTag"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_tag_color"
                android:paddingStart="10dp"
                android:paddingTop="4dp"
                android:paddingEnd="10dp"
                android:paddingBottom="4dp"
                android:text="@string/tag_string"
                android:textColor="@color/color_primary"
                android:textSize="9sp"
                />

            <TextView
                android:id="@+id/tvMealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"/>
            <TextView
                android:textAllCaps="false"
                android:id="@+id/tvAreaCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_category"
                android:textColor="@color/gray"
                android:textSize="9sp"
                android:layout_marginBottom="14dp"/>

            <Button
                android:id="@+id/btnViewRecipe"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textSize="10sp"
                android:backgroundTint="@color/color_primary"
                android:text="@string/view_recipe"
                android:textColor="@color/white"
                app:cornerRadius="15dp" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/imgMeal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:clipToOutline="true"
                android:src="@drawable/img_meal_test"/>

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="12dp"
                android:layout_gravity="top|end"
                android:background="@drawable/shape_white_rounded"
                android:src="@drawable/ic_fulled_heart"
                android:scaleType="centerInside"
                android:padding="6dp"
                android:contentDescription="@string/favorite"
                android:clickable="true"
                android:focusable="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_gradiant_white_overlay" />
        </FrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
